# apply-ai

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
apply_ai/: ats.py  cognee_config.py  cognee_rest.py  docgen.py  fit_score.py  jd_ingest.py  llm.py  memory.py  resume_ingest.py  schemas.py  tailor.py  tracker.py  verify.py
docs/plans/: 2026-07-04-apply-ai-phase1.md
docs/specs/: 2026-07-04-apply-ai-design.md
tests/: test_ats.py  test_cognee_rest.py  test_docgen.py  test_fit_score.py  test_jd_ingest.py  test_memory.py  test_schemas.py  test_tailor.py  test_tracker.py  test_verify.py
