[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apply_ai"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "trafilatura>=1.8",
  "anthropic>=0.40",
  "cognee>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["apply_ai*"]
